# ISIC_2019_deep_learning

./: .gitignore  Dockerfile  README.md  predictions_val.csv  pyproject.toml  setup.md
data/slice/ISIC_SUBSET/: train.csv  val.csv
notebooks/: densenet.ipynb  index.ipynb  predictions_val.csv  slice_isic.ipynb
src/api/: predict.py
src/modules/: dataset.py  model.py  trainer.py
src/scripts/: predict.py  predictions_val.csv  train.py  validation.py
